k8s/ingress-svc.yaml
# This is by maheen
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - hsmaheen.com
        - www.hsmaheen.com
      secretName: hsmaheen.com
  rules:
    rules:
      - http:
          paths:
            - path: /
              backend:
                serviceName: client-cluster-ip-svc
                servicePort: 3000
            - path: /api/
              backend:
                serviceName: server-cluster-ip-svc
                servicePort: 8080
      - host: hsmaheen.com
        http:
          paths:
            - path: /
              backend:
                serviceName: client-cluster-ip-svc
                servicePort: 3000
            - path: /api/
              backend:
                serviceName: server-cluster-ip-svc
                servicePort: 8080
      - host: www.hsmaheen.com
        http:
          paths:
            - path: /
              backend:
                serviceName: client-cluster-ip-svc
                servicePort: 3000
            - path: /api/
              backend:
                serviceName: server-cluster-ip-svc
                servicePort: 8080
